Rename header, prevent scrolling to map on mobile

--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -1,4 +1,4 @@
-header {
+nav {
 	background-color: purple;
 	padding: 0.5vw 2vw;
 	display: flex;
